# Forge

./: .gitignore  .mcp.json  CONTRACTS.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  config.local.example.yaml  config.yaml  pyproject.toml
.claude/commands/: forge-analyze.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/claims/: rate-source-ambiguity-incident.yml
examples/document-operations/: redaction-miss-incident.yml
forge_cli/: analyzer.py  cli.py  config.py  display.py  incident_store.py  mcp_http.py  mcp_server.py  mcp_sse.py  models.py  providers.py  schema_metadata.py
incidents/2026-03/: 2026-03-04-001.yml  2026-03-04-002.yml  2026-03-04-003.yml  2026-03-04-004.yml  2026-03-04-005.yml
integrations/codex/: README.md  SKILL.md
integrations/codex/agents/: openai.yaml
playbook/: error-propagation-hallucination.md  index.md  silent-fallback.md
templates/: analysis-prompt.md  incident.yml
templates/playbooks/: claims-rate-source-ambiguity.md  document-review-redaction-miss.md
tests/: conftest.py  test_analyzer.py  test_ci_workflow.py  test_cli.py  test_config.py  test_incident_store.py  test_mcp_http.py  test_models.py  test_playbook.py  test_stats.py
