[project]
name = "forge-cli"
version = "0.1.0"
description = "Git-native incident tracking and pattern analysis for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "USMI Labs" }]
requires-python = ">=3.11"
keywords = ["ai", "agents", "incident-tracking", "mcp", "cli", "operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.25.1",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/im-sham/Forge"
Repository = "https://github.com/im-sham/Forge"
Issues = "https://github.com/im-sham/Forge/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.0.0"]
mcp = ["mcp>=1.0.0", "uvicorn>=0.30.0"]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
forge = "forge_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
